# lms_system_project

./: .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: celery.py  settings.py  urls.py
course/: admin.py  models.py  pagination.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
course/migrations/: 0001_initial.py  0002_course_lesson.py  0003_alter_course_title.py  0004_course_user_course.py  0005_subscription.py  0006_course_changed_course_published.py
lesson/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
lesson/migrations/: 0001_initial.py  0002_alter_lesson_title.py  0003_alter_lesson_title.py  0004_lesson_user_lesson.py
payments/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
payments/management/commands/: payment_init.py
payments/migrations/: 0001_initial.py  0002_rename_is_course_paid_payment_course_and_more.py  0003_alter_payment_amount.py  0004_payment_session.py
users/: models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: cmg.py
users/migrations/: 0001_initial.py  0002_user_username.py  0003_alter_user_managers.py  0004_remove_user_username.py  0005_alter_user_managers.py
